remove old templates

--- a/themes/AdminLTE/templates/groups/index.html
+++ b/themes/AdminLTE/templates/groups/index.html
@@ -282,7 +282,7 @@
 
 $("#groups #delete").click(function() {
       var groupname = $(this).attr('data-user');
-      if (confirm('Deseja excluir o grupo ' +groupname+ ' ?')) {
+      if (confirm('Deleting Group ' +groupname+ ' ?')) {
         deleteGroup(groupname);
     }
   });
